--- a/Assets/style.css
+++ b/Assets/style.css
@@ -19,6 +19,7 @@ hr {
 
   }
 
+
   .bg-dark {
     background-color: #34ebc6 !important;
   }
@@ -27,7 +28,13 @@ hr {
     max-width: 300px;
     height: 275px;
   }
+  .card {
+    background-color: #7C81A2;
+  }
 
+  .form-group {
+    background-color: #F0EFAA;
+  }
   .footer {
     position: fixed;
     left: 0;
