--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,20 +8,16 @@ hr {
     border-width: 1px;
   }
 
-  body, html {
-    background-image: url("https://images6.alphacoders.com/964/964817.png");
-    background-color: #8BABA6;
-    height: 100%;
-    background-position: 100%;
-    background-repeat: no-repeat;
-    background-size: 1075px;
-    font-family: 'Dancing Script', cursive !important; 
+  body{
+    background-image: url("https://i.pinimg.com/originals/38/94/1b/38941b39552950aeaa84b843194591a6.jpg");
+    background-size: 100%;
+    font-family: 'Dancing Script', cursive; 
 
   }
 
 
   .bg-dark {
-    background-color: #34ebc6 !important;
+    background-color: #990b525d !important;
   }
 
   .card img{
@@ -40,9 +36,10 @@ hr {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #34ebc6;
+    background-color: #990b525d !important;
     color: black;
     text-align: center;
+    font-size: 20px;
   }
 
 
