--- a/Assets/style.css
+++ b/Assets/style.css
@@ -11,25 +11,45 @@ hr {
   body{
     background-image: url("https://i.pinimg.com/originals/38/94/1b/38941b39552950aeaa84b843194591a6.jpg");
     background-size: 100%;
-    font-family: 'Dancing Script', cursive; 
+    font-family: 'Cinzel Decorative', cursive;
+  }
+
+    
+
+
+  h1 {
+    font-family: 'Meddon', cursive;
+      font-size: 70px;
+    text-align: center;
+    color: rgb(47, 180, 151);
+    text-shadow: 1px 7px 9px rgb(153, 230, 240), 0 0 20px rgb(158, 13, 86), 0 0 5px rgb(26, 4, 9);
 
   }
 
+  .text {
+    font-family: 'Cormorant Upright', serif;
+        font-size: 30px;
+        color: rgb(53, 0, 83);
+        background-color: rgba(161, 252, 238, 0.233);    
+    }
+  
 
   .bg-dark {
     background-color: #990b525d !important;
   }
 
   .card img{
-    max-width: 300px;
-    height: 275px;
+    max-width: 1200px;
+    height: 350px;
   }
   .card {
-    background-color: #7C81A2;
+    background-color: rgba(240, 239, 170, 0.541)
+    
   }
 
   .form-group {
-    background-color: #F0EFAA;
+    background-color:rgba(240, 239, 170, 0.541);
+    width: auto;
   }
   .footer {
     position: fixed;
@@ -42,6 +62,19 @@ hr {
     font-size: 20px;
   }
 
+  .fa {
+    color:#2FB497;
+      font-size: 70px !important;
+      padding-top: 13px;
+      padding-left: 20px;
+      letter-spacing: 8px;
+      }
+
+.fa:hover{
+ color: rgb(253, 255, 162);
+ transition-duration: 0.65s;
+    transform: scale(1.4); 
+}
 
 
   
