--- a/Assets/style.css
+++ b/Assets/style.css
@@ -24,13 +24,39 @@ hr {
     color: rgb(47, 180, 151);
     text-shadow: 1px 7px 9px rgb(153, 230, 240), 0 0 20px rgb(158, 13, 86), 0 0 5px rgb(26, 4, 9);
 
+
   }
+
+  h1, h1{
+    padding-right:220px;
+  }
+
+  h1, h1, h1{
+    padding-left: 155px;
+  }
+
+  a.nav-link{
+    font-size: 20px;
+    color: #751268 !important;
+    font-weight: bold;
+  }
+a.nav-link:hover{
+  color:rgb(253, 255, 162) !important;
+  transition-duration: 0.65s;
+    transform: scale(1.2);
+}
+
+.navbar-dark .navbar-brand {
+  font-size: 27px;
+}
 
   .text {
     font-family: 'Cormorant Upright', serif;
-        font-size: 30px;
+        font-size: 36px;
         color: rgb(53, 0, 83);
         background-color: rgba(161, 252, 238, 0.233);    
+        margin-top: 340px;
+        margin-left: 40px;
     }
   
 
@@ -40,23 +66,45 @@ hr {
 
   .card img{
     max-width: 1200px;
-    height: 350px;
+    height: 337px;
   }
   .card {
     background-color: rgba(240, 239, 170, 0.541)
-    
   }
+
+  .card-text {
+    font-size: 24px;
+  }
+  
+  .card-body{
+    height: 89px;
+  }
+  
 
   .form-group {
     background-color:rgba(240, 239, 170, 0.541);
-    width: auto;
+    margin-left: 400px;
+    margin-right: 400px;
+    font-size: 28.7px;
+    text-align: center;
   }
+
+  .form-control{
+    height:100px;
+    text-align: center;
+    font-size: 24.8px;
+  }
+  textarea.form-control {
+    height: 140px;
+    text-align: center;
+  }
+
   .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    height: 78px;
     background-color: #990b525d !important;
     color: black;
     text-align: center;
@@ -65,9 +113,10 @@ hr {
 
   .fa {
     color:rgb(117, 18, 104);
-      font-size: 55px !important;
+      font-size: 65px !important;
       /* padding-top: 13px;
       padding-left: 20px; */
+      /* padding-bottom: ; */
       letter-spacing: 50px;
       }
 
