--- a/css/heading.css
+++ b/css/heading.css
@@ -45,6 +45,20 @@
     background-color: transparent !important;
 }
 
+#mainNav .navbar-nav>li.nav-item>a.nav-link.active {
+    background-color: rgb(175, 224, 226);
+}
+
+#mainNav .navbar-nav>li.nav-item>a.nav-link.active:hover {
+    background-color: rgb(206, 117, 147);
+}
+
+.text-secondary {
+    color: white !important;
+}
+
+
+
 a {
     color:rgb(53, 0, 0) !important;
     font-family: 'Darker Grotesque', sans-serif;
@@ -95,7 +109,7 @@ p.pre-wrap.lead {
 }
   
 p.pre-wrap.lead:hover {
-    background-color: rgb(0, 181, 187);
+    background-color: rgba(109, 0, 36, 0.596);
     color: rgb(255, 250, 238);
     transition: 1.3s;
     opacity: 1;
@@ -107,6 +121,164 @@ p.pre-wrap.lead:hover {
 section#contact {
     background-color: rgb(173, 29, 48);
 }
+
+.divider-custom .divider-custom-line {
+    width: 100%;
+    max-width: 17.3rem;
+    height: .25rem;
+    background-color: rgb(175, 224, 226);
+    border-radius: 1rem;
+    border-color: #10d1a7!important;
+}
+
+.btn {
+    background-color: rgb(175, 224, 226);
+    z-index: 1;
+    font-size: 50px;
+
+    
+}
+
+.btn-group-lg>.btn, .btn-lg:active {
+    padding: 1rem 3rem;
+    font-size: 3rem;
+    line-height: 1.5;
+    border-radius: .75rem;
+    transform: translateY(-1px);
+    
+}
+
+.btn-group-lg>.btn, .btn-lg:hover {
+    background-color: rgb(206, 117, 147);
+    transition: 1.3s;
+    opacity: 1;
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 30px 100px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: absolute;
+}
+
+/* .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+} */
+
+
+
+.btn-group-lg>.btn, .btn-lg::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-group-lg>.btn, .btn-lg::after {
+    background-color: rgb(206, 117, 147);
+}
+
+.btn-group-lg>.btn, .btn-lg:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 5s ease-out;
+    animation-fill-mode: backwards;
+}
+
+
+
+
+.btn-link {
+
+    margin-left: 423px;
+    /* padding: 30px 120px; */
+    display: inline-block;
+    border-radius: 100px;
+    z-index: 2;
+    opacity: .9;
+    position: absolute;                       
+    font-size: 50px;
+    line-height: 1.5;
+    border-radius: .75rem;
+    /* transform: translateY(-1px); */
+}
+
+/* .btn-github {
+    z-index: 2;
+} */
+
+.btn-email {
+        margin-left: 860px;
+    /* padding: 30px 120px; */
+    display: inline-block;
+    border-radius: 100px;
+    z-index: 3;
+    opacity: .9;
+    position: absolute;                       
+    font-size: 50px;
+    /* line-height: 1.5; */
+    border-radius: .75rem;
+    /* transform: translateY(-1px); */
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
+.footer {
+    background-color: rgb(173, 29, 48);
+}
+
+.copyright {
+    background-color: rgb(255, 180, 164);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* section#contact.page-section {
+
+} */
 
 /* 
 #mainNav {
