--- a/css/heading.css
+++ b/css/heading.css
@@ -38,7 +38,31 @@
 
 }
 
- 
+ /* MODAL */
+
+ /* h2#portfolio-modal-title.mb-0 {
+    font-family: 'Darker Grotesque', sans-serif;
+    color:rgb(85, 241, 65);
+    text-shadow: 0px -3px 5px #f3a0a0;
+
+ } */
+
+ .portfolio-modal .portfolio-modal-title {
+    font-size: 90px;
+    line-height: 3rem;
+    letter-spacing: 2px;
+    padding-bottom: 10px;
+    font-weight: lighter;
+    font-family: 'Gruppo', cursive;
+    color:rgba(255, 255, 255, 0.534);
+    text-shadow: 1px 2px 0px #5e0707c7;
+
+}
+
+.modal-body {
+    background: url("BGimg/HPBG2.gif");
+    
+}
 
 
 .bg-secondary {
@@ -55,6 +79,7 @@
 
 .text-secondary {
     color: white !important;
+    
 }
 
 
@@ -82,6 +107,13 @@ p#title {
     text-shadow: 4px 4px 5px #ffeded;
     font-weight: bold;
 
+
+}
+
+p {
+    color: rgb(255, 241, 241);
+    font-size: 33px;
+    font-family: 'Darker Grotesque', sans-serif;
 
 }
 
@@ -138,6 +170,11 @@ section#contact {
 
     
 }
+
+button.btn.btn-primary {
+    background: transparent;
+}
+
 
 .btn-group-lg>.btn, .btn-lg:active {
     padding: 1rem 3rem;
